# casetools

./: .gitignore  README.md  coding_style_report.md  git_report.md  main.py  main_after.py  test_quadratic.py  tests_report.md  verification_report.md
autotools/: Doxyfile  Makefile.am  configure.ac  configure~  main.py
make/: Doxyfile  Makefile
